syntax = "proto3";

option go_package = "github.com/elap5e/penguin/pkg/encoding/trpc/pb";

// Message generated by proto-message-gen. DO NOT EDIT.
// source: tencent.p1399im.oidb.oidb_sso
//
// oidb_sso is the message type for the oidb_sso.
message oidb_sso {
  // MetaData is the message type for the MetaData.
  message MetaData {
    string key  = 1; // key
    bytes value = 2; // value
  }
  // OIDBSSOPkg is the message type for the OIDBSSOPkg.
  message OIDBSSOPkg {
    bytes bodybuffer                  = 4; // bytes_bodybuffer
    string client_version             = 6; // str_client_version
    string error_msg                  = 5; // str_error_msg
    repeated MetaData trpc_trans_info = 11; // trpc_trans_info
    uint32 command                    = 1; // uint32_command
    uint32 result                     = 3; // uint32_result
    uint32 service_type               = 2; // uint32_service_type
  }
}
